[package]
name = "roxyp"
version = "0.1.0"
authors = ["Guy J Grigsby <guy.grigsby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-proxy = "0.6.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
http = "0.2.0"
