[package]
name = "roxyp"
version = "0.1.0"
authors = ["Guy J Grigsby <guy@grigsby.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
tokio-tls = "0.3.0"
native-tls = "0.2.3"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
http = "0.2.0"
hyper-tls = "0.4.1"
